# lignolux

./: .gitmodules  Makefile  README.md  manage.py  paper.myst.md  pyproject.toml  schema_inventory.json
.devcontainer/: devcontainer.json
data/: create_symlinks.py
data/chats/: CNF Processing_ PFP Confusion Clarified .md  CNT Bandgap Creation with Lignin Vitrimer .md  CNT Cables 2 vs. Copper_Aluminum Cost .md  Carbon Cables_ Method vs. Application .md  Carbon Chips_ Hurdles and Future .md  Green Fluids_ Gear and Heat Pump .md  Lignolux Enhances Fusion Production Design .md  Photon's Phase Fingerprint on Particles .md  Production Process Modeling with RDF-star .md  Rare Earth-Free Permanent Magnet Alternatives .md  Red and Blue Laser Beam Mixing .md  SWCNT Rectifiers and Power Transmission .md  Speckle, Metamaterials, and Fast Sensing .md  Write a grant for a RISC CPU made out of graphene transistors .md  gemini_google-gemini_2026-01-20T19-50-40-0500.json  gemini_google-gemini_2026-01-20T19-51-06-0500.md  gemini_google-gemini_2026-01-25T18-36-38-0500.md  gemini_google-gemini_2026-01-25T18-36-42-0500.json  gemini_google-gemini_2026-01-25T18-37-29-0500.md  gemini_google-gemini_2026-01-25T18-37-30-0500.json  gemini_google-gemini_2026-01-25T18-38-01-0500.md  (+25 more)
docs/: cli_reference.md  conf.py  index.md  readme.md  schema.md  tools.md  visualization.md
docs/chats/: index.md
sustainablefactory/: __init__.py  cli.py  parser.py  rdf_gen.py
tests/: test_aggregate_technical_data.py  test_parser.py  test_rdf_gen.py
tools/: aggregate_technical_data.py  rdf_to_mermaid.py
(+19 files in other folders)
